ubah judul coldown

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Ulang Tahun</title>
+    <title>Countdown</title>
     <style>
         /* Mengatur tampilan dasar */
         body {
@@ -88,7 +88,7 @@
     </style>
 </head>
 <body>
-    <h1>Hitung Mundur Ulang Tahun!</h1>
+    <h1>Nungguin Yaa??</h1>
     <div id="countdown">Loading...</div>
 
     <!-- Dekorasi Balon -->
